--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
-.App {
-  text-align: center;
+.app__categories-container {
+  @apply flex 
+  flex-wrap 
+  justify-between 
+  w-full;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app__category-container {
+  @apply flex
+  flex-auto
+  items-center
+  justify-center
+  h-60
+  overflow-hidden
+  min-w-[30%]
+  hover:cursor-pointer
+  shadow-xl
+  rounded-sm
+  mb-4
+  mx-2;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app__category-container:hover .app__category-image {
+  @apply scale-110;
+  transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.app__category-container:hover .app__category-body-container {
+  @apply opacity-90;
 }
 
-.App-link {
-  color: #61dafb;
+.app__category-container.large {
+  @apply h-96;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app__category-image {
+  @apply w-full
+  h-full;
+}
+
+.app__category-image img {
+  @apply w-full
+  h-full
+  object-cover;
+}
+
+.app__category-body-container {
+  @apply flex
+  flex-col
+  items-center
+  justify-center 
+  h-24
+  px-6
+  shadow-lg
+  bg-white
+  opacity-70
+  absolute;
+}
+
+.app__category-body-container h2 {
+  @apply font-bold
+  mx-2
+  text-gray-600
+  text-xl;
+}
+
+.app__category-body-container p {
+  @apply font-light
+  text-base;
 }
