Pretty up category preview

--- a/src/components/CategoryPreview/CategoryPreview.css
+++ b/src/components/CategoryPreview/CategoryPreview.css
@@ -1,11 +1,17 @@
 .category-preview__title {
   @apply text-3xl
-          font-bold
-          my-4;
+  font-bold
+  my-4
+  cursor-pointer
+  flex
+  gap-2
+  transition-all
+  hover:gap-4
+  hover:text-slate-600;
 }
 
 .category-preview__categories {
   @apply grid
-      grid-cols-4
-      gap-8;
+  grid-cols-4
+  gap-8;
 }
